--- a/src/scss/layout_1.scss
+++ b/src/scss/layout_1.scss
@@ -121,7 +121,6 @@ body {
     background-image: url(../images/process.jpeg);
     background-size: cover;
     background-position: center center;
-    height: 100vh;
     position: relative;
     z-index: 1;
     color: #fff;
@@ -140,5 +139,44 @@ body {
     .process-wrap {
         position: relative;
         z-index: 2;
+        min-height: 50vh;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
+
+.flow {
+    .flow-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        padding: 20px 0;
+
+        &::after {
+            content: '';
+            border-left: 5px dashed #fff;
+            height: 100%;
+            position: absolute;
+            z-index: 1;
+        }
+    }
+
+    .flow-circle {
+        width: 36px;
+        height: 36px;
+        border-radius: 50px;
+        background: red;
+        position: relative;
+        z-index: 2;
+    }
+
+    .flow-text {
+        position: absolute;
+        background: blue;
+        padding: 20px;
+        border-radius: 10px;
+        left: 50%;
+        margin-left: 72px;
     }
 }
