--- a/src/scss/layout_1.scss
+++ b/src/scss/layout_1.scss
@@ -85,7 +85,7 @@ body {
 
 
         .content-wrap {
-            background: rgba(14, 50, 80, 0.9);
+            background: rgba(21, 109, 182, 0.9);
             display: flex;
             width: 100%;
 
@@ -191,7 +191,7 @@ body {
 
     .flow-text {
         position: absolute;
-        background: blue;
+        background: rgb(64, 32, 204);
         padding: 20px;
         border-radius: 10px;
         left: 50%;
